--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,16 @@ services:
     ports:
       - "5173:5173"
 
+  backend:
+    build: ./backend
+    container_name: nestjs_app
+    ports:
+      - "3000:3000"
+    depends_on:
+      - db
+    environment:
+      - DATABASE_HOST=db
+      - DATABASE_PORT=3306
+      - DATABASE_USER=root
+      - DATABASE_PASSWORD=secret
+      - DATABASE_NAME=comments_db
