--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,8 @@
-FROM node:alpine
+FROM node:24.11.1-alpine
 
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm run build
 
 CMD ["npm", "run", "start:prod"]
